<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/Sample_Pictures_backdrop"
            android:layout_marginBottom="74dp"
            android:layout_above="@+id/tv_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/Sample_Pictures_head_portrait"
            android:layout_above="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/gender"
                />

        <TextView
            android:id="@+id/xxxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ssssssssssssss"
            android:layout_toRightOf="@id/gender"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/birthday"
            />

        <TextView
            android:id="@+id/xxxxxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ssssssssssssss"
            android:layout_toRightOf="@id/birthday"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/profession"
            />

        <TextView
            android:id="@+id/xxxxxxxxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ssssssssssssss"
            android:layout_toRightOf="@id/profession"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/btn_change_password"/>

        <Button
            android:id="@+id/btn_modified_data"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:layout_alignParentRight="true"
            android:text="@string/btn_modified_data"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>
